# directory_sync

./: .gitignore  .golangci.yml  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Makefile  go.mod  notes.md  run.sh
.github/workflows/: ci.yml
cmd/dsync/: main.go
dsync_go_documentation/: README.md  STATUS.md  TASKS.md
dsync_go_documentation/agent/: CONTEXT.md
dsync_go_documentation/design/: CLEAN.md  RSYNC.md  SAFETY.md
dsync_go_documentation/spec/: BEHAVIORS.md  CLI.md  CONFIG.md  JSON.md  OVERVIEW.md
internal/app/: app.go  doctor.go  help.go  init.go  init_test.go  pull.go  push.go  sync.go  sync_test.go
internal/config/: config.go  config_test.go  find_test.go  template.go
internal/rsync/: sync.go  sync_test.go
internal/scope/: scope.go  scope_test.go
internal/version/: version.go
internal/xdg/: xdg.go  xdg_test.go
rust/: Cargo.toml  run.sh
rust/src/model/: cli.rs  config.rs  folder.rs  link.rs  ssh.rs
rust/src/service/: core.rs  folder.rs
scripts/: bootstrap.sh  dev.sh  health.sh
src/: main.rs
src/model/: cli.rs  config.rs  folder.rs  link.rs  mod.rs  ssh.rs
src/service/: cli.rs  config.rs  core.rs  folder.rs  link.rs  mod.rs  ssh.rs  tar.rs
