[package]
name = "directory-sync"
version = "0.1.0"
edition = "2021"

# TODO: possibly rename to directory-sync
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
serde = { version = "1.0.197", features = ["derive"]}
toml = "0.8.12"
